<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/privacy_policy"
            android:checkable="false"
            android:icon="@drawable/ic_privacy_policy"
            android:title="@string/privacy_policy" />


        <item
            android:id="@+id/share"
            android:checkable="false"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />

        <item
            android:id="@+id/rate_us"
            android:checkable="false"
            android:icon="@drawable/ic_rate_us"
            android:title="@string/rate_us" />

    </group>

</menu>